Add data downloads logic
